@@ -21,11 +21,11 @@ import static de.tudarmstadt.ukp.clarin.webanno.api.casstorage.CasAccessMode.EXC
 import static de.tudarmstadt.ukp.clarin.webanno.model.AnchoringMode.TOKENS;
 import static de.tudarmstadt.ukp.clarin.webanno.model.OverlapMode.NO_OVERLAP;
 import static de.tudarmstadt.ukp.inception.annotation.storage.CasMetadataUtils.getInternalTypeSystem;
-import static de.tudarmstadt.ukp.inception.export.DocumentImportExportServiceImpl.FEATURE_BASE_NAME_LAYER;
-import static de.tudarmstadt.ukp.inception.export.DocumentImportExportServiceImpl.FEATURE_BASE_NAME_NAME;
-import static de.tudarmstadt.ukp.inception.export.DocumentImportExportServiceImpl.FEATURE_BASE_NAME_UI_NAME;
-import static de.tudarmstadt.ukp.inception.export.DocumentImportExportServiceImpl.TYPE_NAME_FEATURE_DEFINITION;
-import static de.tudarmstadt.ukp.inception.export.DocumentImportExportServiceImpl.TYPE_NAME_LAYER_DEFINITION;
+import static de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService.FEATURE_BASE_NAME_LAYER;
+import static de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService.FEATURE_BASE_NAME_NAME;
+import static de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService.FEATURE_BASE_NAME_UI_NAME;
+import static de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService.TYPE_NAME_FEATURE_DEFINITION;
+import static de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService.TYPE_NAME_LAYER_DEFINITION;
 import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Comparator.comparing;
@@ -46,7 +46,6 @@ import static org.mockito.Mockito.when;
 import java.io.File;
 import java.io.FileInputStream;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.compress.archivers.zip.ZipArchiveEntry;
 import org.apache.commons.compress.archivers.zip.ZipArchiveInputStream;
@@ -72,10 +71,11 @@ import de.tudarmstadt.ukp.clarin.webanno.diag.ChecksRegistry;
 import de.tudarmstadt.ukp.clarin.webanno.diag.RepairsRegistry;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
+import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationSet;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.model.SourceDocument;
 import de.tudarmstadt.ukp.dkpro.core.api.metadata.type.DocumentMetaData;
-import de.tudarmstadt.ukp.inception.annotation.layer.span.SpanLayerSupport;
+import de.tudarmstadt.ukp.inception.annotation.layer.span.api.SpanLayerSupport;
 import de.tudarmstadt.ukp.inception.annotation.storage.CasStorageServiceImpl;
 import de.tudarmstadt.ukp.inception.annotation.storage.config.CasStorageBackupProperties;
 import de.tudarmstadt.ukp.inception.annotation.storage.config.CasStorageCachePropertiesImpl;
@@ -198,10 +198,10 @@ public class DocumentImportExportServiceImplTest
         var jcas2 = loadJCasFromZippedXmi(exportedXmi);
         var layerDefs = jcas2.select(TYPE_NAME_LAYER_DEFINITION).asList().stream()
                 .sorted(comparing(fs -> getFeature(fs, FEATURE_BASE_NAME_NAME, String.class)))
-                .collect(Collectors.toList());
+                .toList();
         var featureDefs = jcas2.select(TYPE_NAME_FEATURE_DEFINITION).asList().stream()
                 .sorted(comparing(fs -> getFeature(fs, FEATURE_BASE_NAME_NAME, String.class)))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(layerDefs) //
                 .extracting( //
@@ -225,7 +225,7 @@ public class DocumentImportExportServiceImplTest
         // Prepare a test CAS with a CASMetadata annotation (DocumentMetaData is added as well
         // because the DKPro Core writers used by the ImportExportService expect it.
         var jcas = createJCas(typesystem);
-        casStorageSession.add("jcas", EXCLUSIVE_WRITE_ACCESS, jcas.getCas());
+        casStorageSession.add(AnnotationSet.forTest("jcas"), EXCLUSIVE_WRITE_ACCESS, jcas.getCas());
         jcas.setDocumentText("This is a test .");
         DocumentMetaData.create(jcas);
         var cmd = new CASMetadata(jcas);
@@ -242,7 +242,8 @@ public class DocumentImportExportServiceImplTest
         // Read the XMI back from the ZIP that was created by the exporter. This is because XMI
         // files are always serialized as XMI file + type system file.
         var jcas = JCasFactory.createJCas(tsd);
-        casStorageSession.add("jcas2", EXCLUSIVE_WRITE_ACCESS, jcas.getCas());
+        casStorageSession.add(AnnotationSet.forTest("jcas2"), EXCLUSIVE_WRITE_ACCESS,
+                jcas.getCas());
         try (var zipInput = new ZipArchiveInputStream(new FileInputStream(exportedXmi))) {
             ZipArchiveEntry entry;
             while ((entry = zipInput.getNextEntry()) != null) {
